Refactor for RichNode
